--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,6 @@ a {
   padding: 1rem;
 }
 
-section {
-  padding: 20px;
-  box-shadow: 0px 0px 8px 0px rgba(0, 0,0, 0.2);
-  margin: 10px 10px;
-  border-radius: 1em;
-}
-
 /*@media (min-width: 768px) {
   body {
     background-color: red;
@@ -101,8 +94,12 @@ section {
   background-color: #fff;
 }
 
-.color-primary {
+.bg-shadow {
   background-color: rgb(241, 241, 241);
+}
+
+.bg-dark {
+  background-color: rgb(3, 0, 43);
 }
 
 .color-secundary {
@@ -131,11 +128,22 @@ section {
 
 .menu a{
   padding: 0 2em;
+  text-decoration: none;
+  color: white;
 }
 
 .menu a:hover{
-  box-shadow: 0px 0px 8px 0px rgba(0, 0,0, 0.2);
-  transition: background-color 0.5s ease;
+  color:orange;
+  transition: 0.5s ease;
+}
+
+.menu a img:hover{
+  color: orange;
+}
+
+.center {
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
 .homeButton {
@@ -162,6 +170,13 @@ section {
 }
 
 /* ---- section ---- */
+
+section {
+  padding: 20px;
+  /*box-shadow: 0px 0px 8px 0px rgba(0, 0,0, 0.2);
+  margin: 10px 10px;
+  border-radius: 1em;*/
+}
 
 section.testimonials {
   /* ...*/
