--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,13 @@ a {
 }
 
 .container{
-  margin: auto;
-  max-width: 1024px;
-  box-shadow: 0px 0px 8px 0px rgba(0, 0,0, 0.2);
-  border-radius: 3px;
-  padding: 1rem;
+  display: flex;
 }
+
+.container p {
+  margin: 10px;
+}
+
 
 /*@media (min-width: 768px) {
   body {
@@ -106,6 +107,15 @@ a {
   background-color: #7ba0be;
 }
 
+.img-container {
+  height: 15%;
+  width: 20%;
+  padding: 10px;
+}
+
+
+
+
 .menu {
   display: flex;
   justify-content: space-around;
@@ -138,7 +148,8 @@ a {
 }
 
 .menu a img:hover{
-  color: orange;
+  opacity: 0.5;
+  transition: 0.5s ease;
 }
 
 .center {
